# MTSecurity

./: .gitignore
my_workspace/backend/: .dockerignore  .env  .env.docker  .env.example  Dockerfile  config.py  main.py  pyproject.toml
my_workspace/backend/ai/: detector.py  inference_engine.py  model_registry.py  pipeline.py  session_registry.py  tracker.py
my_workspace/backend/alerts/: alert_manager.py  snapshot.py
my_workspace/backend/alerts/notifications/: base.py  discord_webhook.py  dispatcher.py  email_sender.py  line_messaging.py  mqtt_publisher.py  slack_webhook.py  webhook_sender.py
my_workspace/backend/api/: app.py  deps.py
my_workspace/backend/api/middleware/: audit.py
my_workspace/backend/api/routers/: auth.py  cameras.py  events.py  health.py  lpr.py  rules.py  simulate.py  (+3 more)
my_workspace/backend/auth/: jwt_handler.py  password.py  permissions.py
my_workspace/backend/data/: mtsecurity.db-shm  mtsecurity.db-wal
my_workspace/backend/db/: init_db.py  pragmas.py  session.py
my_workspace/backend/ingestion/: camera_manager.py  camera_thread.py  clip_buffer.py  evidence_store.py  frame_buffer.py  frame_codec.py  webcam_enumerator.py  webcam_watcher.py
my_workspace/backend/models/: __init__.py  alert_note.py  api_key.py  audit_log.py  base.py  camera.py  event.py  lpr_whitelist.py  notification.py  rule.py  system_setting.py  token_blacklist.py  user.py  zone.py
my_workspace/backend/protocol/: message_bus.py  mtp.py  payloads.py
my_workspace/backend/rules/: dwell_tracker.py  logic_validator.py  rule_engine.py  schedule_manager.py  zone_manager.py
my_workspace/backend/schemas/: analytics.py  camera.py  event.py  user.py  zone.py
my_workspace/backend/scripts/: create_admin.py  download_model.py  test_coords.py  test_infer.py
my_workspace/backend/ssot/: config_service.py  state_registry.py
my_workspace/backend/tests/: conftest.py
(+134 files in other folders)
