[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mtsecurity"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Pydantic + settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # Auth
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "cryptography>=42",          # Fernet AES-256
    # HTTP client
    "httpx>=0.27",
    # Cache (no Redis)
    "cachetools>=5.3",
    # Computer vision (OpenVINO already installed in venv)
    "opencv-python-headless>=4.9",
    # Notifications
    "line-bot-sdk>=3.10",
    "paho-mqtt>=2.0",
    "jinja2>=3.1",               # email templates
    # Utilities
    "python-dotenv>=1.0",
    "psutil>=5.9",               # CPU/RAM stats
    "slowapi>=0.1.9",            # rate limiting
    "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",               # TestClient
    "factory-boy>=3.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-cachetools",
    "types-bcrypt",
]
postgres = [
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]   # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
